Fixed navbar not collapsing when in smaller view. Navbar now responsive

--- a/static/Styles/navbarStyle.css
+++ b/static/Styles/navbarStyle.css
@@ -11,8 +11,11 @@
 }
 
 .custom-link:hover {
-  color: darkorange;
   opacity: 50%;
+}
+
+.my-navbar-coll {
+  text-align: center;
 }
 
   .bd-placeholder-img {
